release 1.7
- Fixed issue 694
  http://java.net/jira/browse/JERSEY-694
  Typo.
- Fixed issue 693
  http://java.net/jira/browse/JERSEY-693
  Javadoc typos.

release 1.6 (03-2011)
- Added support for lists and arrays of JAXBElement<?> objects.
- Fixed issue 681
  http://java.net/jira/browse/JERSEY-681
  Missing repository declaration in quickstart-grizzly archetype
- Grizzly 2.0 integration
  Introduced GrizzlyWebContainerFactory in jersey-grizzly2
  Introduced jersey-tests-framework-grizzly2 and made it default
  option in test framework.
  Changed (almost) all samples to use jersey-grizzly2 for test/run.
- Added support for specifying XML header in XML responses by attaching XmlHeader annotation to the resource method.
- Fixed issue 649
  http://java.net/jira/browse/JERSEY-649
  @Path("{id}") not matched for paths containing %2F
  Introduced a new ResourceConfig feature, "com.sun.jersey.api.container.grizzly.AllowEncodedSlashFeature".
  The feature allows to configure Grizzly to enable encoded slashes in URIs
- Fixed issue 576
  http://java.net/jira/browse/JERSEY-576
  Grizzly upgraded to 1.9.31
- JacksonJsonProvider example: added ObjectMapper resolver
  to show how to use Jackon specific configuration options
- Fixed issue 625
  http://java.net/jira/browse/JERSEY-625
  IllegalAccessException when using jersey-server-linking with
  java.* and javax.* field types (unannotated). Excluding these
  from recurive discovery algorithm.
- Adding support for Cobertura based code coverage measurement.
  Use following maven targets to compile, instrument, test and
  generate reports:
    mvn clean install -Dcobertura -Dmaven.test.skip=true
    mvn cobertura:cobertura -Dcobertura
- Fixed issue 643
  http://java.net/jira/browse/JERSEY-643
  Allowing users to use different client implementation in Jersey test
  framework. It might be done by providing ClientFactory and overriding
  method getClientFactory in JerseyTest, which respects priority of